<resources>

    <string name="app_name">TrulyMadly</string>
    <string name="text_trulyMadly">trulymadly</string>
    <string name="text_findYourForever">#FindYourForever</string>
    <string name="text_mobile">Continue with Mobile</string>
    <string name="text_facebook">Continue with Facebook</string>
    <string name="text_number">What\'s your mobile number?</string>
    <string name="text_yourNumber">Your Mobile Number</string>
    <string name="text_verificationCode">Verification Code</string>
    <string name="text_code">+91</string>
    <string name="text_otp">GET OTP</string>
    <string name="text_continue">Continue</string>
    <string name="text_login">Log in With Facebook</string>
    <string name="text_tmWillReceive"> <b>Truly Madly</b> will receive:</string>
    <string name="text_editThis">Edit This</string>
    <string name="text_letTheApp">This doesn\'t let the app post to Facebook</string>
    <string name="text_continueAsFacebookUser">Continue as Facebook User</string>
    <string name="text_privacy">TrulyMadly\'s Privacy Policy and Terms</string>
    <string name="text_nameAndProfilePicture">your name and profile picture, email address, birthday, photos, gender, Page likes, current city and friends list.</string>
    <string name="text_otpHelp">If OTP doesn\'t verify automatically, enter the 4 digit code we sent to the number entered above.</string>
    <string name="text_tAndC">By Clicking above, you agree with our</string>
    <string name="text_tAndC2"><u>Terms and Conditions</u> and <u>Privacy Policy.</u></string>
    <string name="next">Next</string>
    <string name="About_You">About You </string>
    <string name="hint_name">Name</string>
    <string name="hint_Surname">Surname</string>
    <string name="hint_email">Email Id</string>
    <string name="hint_date">DD/MM/YYYY</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="basic_detail">Basic Details</string>
    <string name="hint_height"> 5 feet 5 inches </string>
    <string name="hint_relationship">Relationship Status</string>
    <string name="hint_city">Location</string>
    <string name="text_Setting">Settings</string>
    <string name="trusty_security"><![CDATA[Trusty & security]]></string>
    <string name="text_aliaChat">Alia Bhatt</string>
    <string name="text_messageAlia">Hey. How is the next film shapi...</string>
    <string name="text_longText">Hey there! Welcome to TrulyMadly. Now finding the one just got way
        easier! Upgrade to the all new experience of TrulyMadly Select. Get more profiles,more
        profile views, access to features such as compatibility quiz, bio, ad free experience and
        much more! Join now: </string>
    <string name="text_Privacy">Privacy</string>
    <string name="text_profile_visibility">Profile visibility</string>
    <string name="text_notifications_alert_type">Notifications alert type</string>
    <string name="text_sound">Sound</string>
    <string name="text_vibration">Vibration</string>
    <string name="text_help_disk">Help Disk</string>
    <string name="text_terms_of_service">Terms of service</string>
    <string name="text_term_of_use">Term of use</string>
    <string name="text_Termsof">Terms of use</string>
    <string name="text_terms_of_use">Terms of use</string>
    <string name="text_safety_guidelines">Safety guidelines</string>
    <string name="text_true_compatibility">True compatibility</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_5">5.32 (1143)</string>
    <string name="text_delete_my_account">Delete My Account</string>
    <string name="hint_promo_code">Promo Code</string>
    <string name="text_buy_boots">Buy Boots</string>
    <string name="text_out_of_boosts">Out of Boosts ?</string>
    <string name="profiles">Profiles</string>
    <string name="student">Student</string>
    <string name="master_in_arts">Master in Arts</string>
    <string name="report"><u>Report</u></string>
    <string name="event_management">Event management</string>
    <string name="others">Others</string>
    <string name="bakery">Bakery</string>
    <string name="artist">artist</string>
    <string name="mbbs">MBBS</string>
    <string name="Doctors">Doctors</string>
    <string name="mba">MBA student</string>
    <string name="devops_cloud_engg"> Devops cloud engg</string>
    <string name="myprofil">My Profile</string>
    <string name="Email_id">Email Id</string>
    <string name="hint_harshemailid">harshraga7@gmail.com"</string>
    <string name="markeup_artist"> Makeup artist </string>
    <string name="bachelor_in_engineering">Bachelors in Engineering </string>
    <string name="degree"> Bachelors in Commerce </string>
    <string name="text_adventurous">#Adventurous</string>
    <string name="text_ambitious">#Ambitious</string>
    <string name="text_ambivert">#Ambivert</string>
    <string name="text_artist">#Artist</string>
    <string name="text_bikeLover">#BikeLover</string>
    <string name="text_calm">#Calm</string>
    <string name="text_caring">#Caring</string>
    <string name="text_carLover">#CarLover</string>
    <string name="text_chaiLover">#ChaiLover</string>
    <string name="text_charming">#Charming</string>
    <string name="text_cheerful">#Cheerful</string>
    <string name="text_chocaholic">#Chocaholic</string>
    <string name="text_coffeeLover">#CoffeeLover</string>
    <string name="text_creative">#Creative</string>
    <string name="text_curious">#Curious</string>
    <string name="text_danceaholic">#Danceaholic</string>
    <string name="text_divorced">#Divorced</string>
    <string name="text_dogLover">#DogLover</string>
    <string name="text_dreamer">#Dreamer</string>
    <string name="text_emotional">#Emotional</string>
    <string name="text_energetic">#Energetic</string>
    <string name="text_entertainer">#Entertainer</string>
    <string name="text_entrepreneur">#Entrepreneur</string>
    <string name="text_extrovert">#Extrovert</string>
    <string name="text_faithful">#Faithful</string>
    <string name="text_feminist">#Feminist</string>
    <string name="text_fitnessFreak">#FitnessFreak</string>
    <string name="text_foodie">#Foodie</string>
    <string name="text_friendly">#Friendly</string>
    <string name="text_funny">#Funny</string>
    <string name="text_gadgetLover">#GadgetLover</string>
    <string name="text_gameAddict">#GameAddict</string>
    <string name="text_geek">#Geek</string>
    <string name="text_independent">#Independent</string>
    <string name="text_intellectual">#Intellectual</string>
    <string name="text_introvert">#Introvert</string>
    <string name="text_kind">#Kind</string>
    <string name="text_loyal">#Loyal</string>
    <string name="text_moody">#Moody</string>
    <string name="text_Motivated">#Motivated</string>
    <string name="text_movieManiac">#MovieManiac</string>
    <string name="text_musicLover">#MusicLover</string>
    <string name="text_mysterious">#Mysterious</string>
    <string name="text_natureLover">#NatureLover</string>
    <string name="text_nightowl">#Nightowl</string>
    <string name="text_openMinded">#OpenMinded</string>
    <string name="text_optimistic">#Optimistic</string>
    <string name="text_partyHopper">#PartyHopper</string>
    <string name="text_reader">#Reader</string>
    <string name="text_romantic">#Romantic</string>
    <string name="text_sapiosexual">#Sapiosexual</string>
    <string name="text_sarcastic">#Sarcastic</string>
    <string name="text_sexy">#Sexy</string>
    <string name="text_shopaholic">#Shopaholic</string>
    <string name="text_shy">#Shy</string>
    <string name="text_simple">#Simple</string>
    <string name="text_spiritual">#Spiritual</string>
    <string name="text_sportsFanatic">#SportsFanatic</string>
    <string name="text_stylish">#Stylish</string>
    <string name="text_talkative">#Talkative</string>
    <string name="text_techie">#Techie</string>
    <string name="text_traveller">#Traveller</string>
    <string name="text_workaholic">#Workaholic</string>
    <string name="text_writer">#Writer</string>
    <string name="text_">#Charming</string>
    <string name="text_save">Save</string>
    <string name="text_tapBelow">Tap below to describe yourself in atleast 3 words</string>
    <string name="text_ranbir">Ranbir, 25</string>
    <string name="text_boost">Boost</string>
    <string name="text_sparks">Sparks</string>
    <string name="text_earnCash">Earn Cash</string>
    <string name="text_profileVisibility">Profile Visibility</string>
    <string name="text_preferences">Preferences</string>
    <string name="text_applyPromo">Apply Promo Code</string>
    <string name="text_Settings">Settings</string>
    <string name="text_rateUs">Rate Us</string>
    <string name="text_coronaStats">Corona Stats</string>
    <string name="text_safeLove">Safe Love</string>
    <string name="text_notificationCenter">Notification Center</string>
    <string name="text_joinNow">Join Now</string>
    <string name="text_findTheOne">FIND THE ONE</string>
    <string name="text_trulymadly2">TRULY MADLY</string>
    <string name="text_select">Select</string>
    <string name="text_time">12:23 AM</string>
    <string name="text_missTm">Miss TM</string>
    <string name="text_missTmChat">Hey there! Welcome to TrulyM...</string>
    <string name="text_time2">11:47 PM</string>
    <string name="text_editPreferences">Edit Preferences</string>
    <string name="text_ageRange">Age Range</string>
    <string name="text_ageRange2">18-30</string>
    <string name="text_locationPreferences">Location Preferences</string>
    <string name="text_near_me">Near Me</string>
    <string name="text_smart_location">Smart Location</string>
    <string name="text_advancedPreferences">Advanced Preferences</string>
    <string name="text_showMe">Show me NRI Profiles</string>
    <string name="text_ShowProfilesPreferences">Show profiles similar to my preferences</string>
    <string name="text_sendMessage">Send Message</string>
    <string name="text_link"><u>http://bit.ly//SeeSelect</u></string>
    <string name="text_date">Tue Dec 29,2020</string>
    <string name="text_aliaConversation">Hey. How is the next film shaping up? Will meet after the packup tomorrow?</string>
    <string name="text_conversations">Conversations</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>