<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seting">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Setting"
            android:textSize="@dimen/dp_28"
           android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_left_arrow"
            android:layout_marginTop="@dimen/dp_10"

            android:layout_marginLeft="@dimen/dp_5"/>


    </androidx.cardview.widget.CardView>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_100"
    android:layout_marginTop="@dimen/dp_50">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Privacy"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_profile_visibility"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:textSize="@dimen/sp_20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_power"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="@dimen/dp_50"/>

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginTop="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_notifications_alert_type"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sound"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_20" />


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_vibration"
    android:textSize="@dimen/sp_20"
    android:layout_marginTop="@dimen/dp_110"
    android:layout_marginLeft="@dimen/dp_20" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@drawable/ic_line_2"
       android:layout_marginTop="@dimen/dp_100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_power"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_330"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_power"
        android:layout_marginTop="@dimen/dp_110"
        android:layout_marginLeft="@dimen/dp_330"/>

</androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:layout_marginTop="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_help_disk"
        android:textSize="@dimen/sp_22"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="@dimen/dp_20"/>

</androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_250"
    android:layout_marginTop="@dimen/dp_20">

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_terms_of_service"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_20"/>

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:text="@string/text_terms_of_use"
                android:textSize="@dimen/sp_20"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_20"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@drawable/ic_line_2"
                android:layout_marginTop="90dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_right_arrow"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginLeft="350dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_safety_guidelines"
                android:textSize="@dimen/sp_20"
                android:layout_marginTop="@dimen/dp_100"
                android:layout_marginLeft="@dimen/dp_20"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@drawable/ic_line_2"
                android:layout_marginTop="@dimen/dp_140"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_right_arrow"
                android:layout_marginTop="@dimen/dp_100"
                android:layout_marginLeft="350dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_150"
                android:text="@string/trusty_security"
                android:textSize="@dimen/sp_20" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@drawable/ic_line_2"
                android:layout_marginTop="190dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_right_arrow"
                android:layout_marginTop="@dimen/dp_150"
                android:layout_marginLeft="350dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_true_compatibility"
                android:textSize="22sp"
                android:layout_marginTop="@dimen/dp_200"
                android:layout_marginLeft="@dimen/dp_20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_right_arrow"
                android:layout_marginTop="@dimen/dp_200"
                android:layout_marginLeft="350dp"/>


</androidx.cardview.widget.CardView>

<Button
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:layout_marginTop="@dimen/dp_40"
    android:background="#F50057"
    android:text="@string/text_log_out"
    android:textAllCaps="false"
    android:layout_marginRight="@dimen/dp_20"
    android:layout_marginLeft="@dimen/dp_20"
    android:textColor="@color/white"
    android:textSize="@dimen/sp_22"
    android:gravity="center"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_delete_my_account"
    android:layout_gravity="center"
    android:layout_marginTop="80dp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/dp_50"
    android:text="@string/text_5"
    />

    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>