<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileLoginScreen">

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/text_number"
        android:textColor="@color/number"
        android:textSize="@dimen/sp_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber">

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_grey"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:padding="@dimen/dp_10"
            android:text="@string/text_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_grey"
            android:ems="10"
            android:hint="@string/text_yourNumber"
            android:inputType="phone"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPhoneNumber">

        <EditText
            android:id="@+id/etVerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_grey"
            android:ems="10"
            android:hint="@string/text_verificationCode"
            android:inputType="phone"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvNumber" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_grey"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/text_otp"
            android:textColor="@color/continue_button"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/continue_button"
        android:text="@string/text_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/llVerification" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center"
        android:textColor="@color/grey"
        android:text="@string/text_otpHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>