<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_startScreen"
    tools:context=".StartScreen">

    <TextView
        android:id="@+id/tvTrulyMadly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/text_trulyMadly"
        android:fontFamily="@font/harry_fat"
        android:drawableStart="@drawable/tm_icon_lollipop"
        android:drawablePadding="@dimen/dp_10"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="165dp"
        android:layout_marginStart="90dp"
        android:fontFamily="@font/harry_plain"
        android:text="@string/text_findYourForever"
        android:textColor="@color/white"
        android:layout_marginTop="340dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_15"
        android:fontFamily="@font/harry_heavy"
        android:textSize="@dimen/sp_22"
        android:textAllCaps="false"
        android:textColor="@color/text_startScreen"
        android:drawableStart="@drawable/ic_mobile_phone"
        android:background="@drawable/rectangle_white_startup"
        android:padding="@dimen/dp_20"
        android:text="@string/text_mobile"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:drawableStart="@drawable/ic_facebook"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_15"
        android:textColor="@color/text_startScreen"
        android:fontFamily="@font/harry_heavy"
        android:textSize="@dimen/sp_22"
        android:textAllCaps="false"
        android:background="@drawable/rectangle_white_startup"
        android:padding="@dimen/dp_20"
        android:text="@string/text_facebook"
        app:layout_constraintBottom_toTopOf="@id/tvTerms1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTerms1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_tAndC"
        android:fontFamily="@font/harry_heavy"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvTerms2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTerms2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:fontFamily="@font/harry_heavy"
        android:textSize="@dimen/sp_16"
        android:text="@string/text_tAndC2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>